# language_modeling_is_compression

./: .gitignore  .ignore  README.md  blockwise_attention_test.py  byte_grouping_test.py  compress.py  compress_test.py  constants.py  language_model_test.py  model_checkpoint.py  model_checkpoint_test.py  pyproject.toml  requirements.txt  rotary_encoding_test.py  train.py  train_test.py  transformer.py  transformer_test.py
compressors/: language_model.py
memory_estimate_report/: artifact.json  build_artifact.py  chart_map.md  memory_estimates.csv  transformer_memory_report.html
